--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com.hk/citations?user=fHkHcMsAAAAJ&hl=en"
-  email            : "lk21@mails.tsinghua.edu.cn"
+  email            : "tsinghua.kaili@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
