--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Kai Li (李凯)"
-description              : "First-year master student at Department of Computer Science and Technology, Tsinghua University"
+description              : "First-year PhD student at Department of Computer Science and Technology, Tsinghua University"
 repository               : "JusperLee/JusperLee.github.io"
 google_scholar_stats_use_cdn : true
 
